[package]
name = "rvideo"
version = "0.1.1"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Real-time video server for embedded apps"
repository = "https://github.com/roboplc/rvideo"
keywords = ["realtime", "video", "roboplc", "plc", "industrial"]
readme = "README.md"

[dependencies]
async-channel = "2.3.1"
binrw = "0.13.3"
parking_lot = "0.12.3"
simple-pool = "0.0.17"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "io-util", "time", "rt"] }
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
imageproc = "0.22"
image = "0.23"
rmp-serde = "1.3.0"
tokio = { version = "1.38.0", features = ["full"] }
rusttype = "0.9.2"
serde_json = "1.0.117"
