[package]
name = "rvideo"
version = "0.3.1"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Real-time video server for embedded apps"
repository = "https://github.com/roboplc/rvideo"
keywords = ["realtime", "video", "roboplc", "plc", "industrial"]
readme = "README.md"
autoexamples = false

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
binrw = "0.13.3"
parking_lot_rt = "0.12.1"
thiserror = "1.0.61"
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["net", "io-util", "time"], optional = true }

[features]
async = ["tokio"]
full = ["async"]

[dev-dependencies]
imageproc = "0.22"
image = "0.23"
rmp-serde = "1.3.0"
tokio = { version = "1.38.0", features = ["full"] }
rusttype = "0.9.2"
serde_json = "1.0.117"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "client-async"
path = "examples/client-async.rs"
required-features = ["async"]

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "server-custom"
path = "examples/server-custom.rs"
