[package]
name = "rvideo-view"
version = "0.2.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "A lightweight video viewer for rvideo"
repository = "https://github.com/roboplc/rvideo"
keywords = ["realtime", "video", "roboplc", "plc", "industrial"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
image = "0.24"
imageproc = "0.23"
rmp-serde = "1.3.0"
rvideo = { version = "0.2" }
serde = "1.0.203"
serde_json = "1.0.117"
turbojpeg = { version = "1.1.0", features = ["image"], optional = true }

[features]
jpeg = ["turbojpeg"]
full = ["jpeg"]

[profile.release]
strip = true
