[package]
name = "rvideo-view"
version = "0.5.2"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "A lightweight video viewer for rvideo"
repository = "https://github.com/roboplc/rvideo"
keywords = ["realtime", "video", "roboplc", "plc", "industrial"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["default", "all_loaders"] }
image = { version = "0.25.2", features = ["jpeg"] }
imageproc = "0.24"
rmp-serde = "1.3.0"
rvideo = { version = "0.4" }
serde = "1.0.203"
serde_json = "1.0.117"

[profile.release]
strip = true
